# ChangeLog for x11-libs/libdrm
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/libdrm/ChangeLog,v 1.8 2005/10/20 19:22:28 spyderous Exp $

*libdrm-1.0.4 (20 Oct 2005)

  20 Oct 2005; Donnie Berkholz <spyderous@gentoo.org>; +libdrm-1.0.4.ebuild:
  Bump to remove libX11 dependency.

  09 Sep 2005; Donnie Berkholz <spyderous@gentoo.org>; +metadata.xml:
  Add metadata.

  28 Aug 2005; MATSUU Takuto <matsuu@gentoo.org> libdrm-1.0.3.ebuild:
  Marked ~sh

  20 Aug 2005; Luca Barbato <lu_zero@gentoo.org> libdrm-1.0.1.ebuild,
  libdrm-1.0.3.ebuild:
  Marked ~ppc

*libdrm-1.0.3 (20 Aug 2005)

  20 Aug 2005; Donnie Berkholz <spyderous@gentoo.org>; +libdrm-1.0.3.ebuild:
  Bump.

  15 Aug 2005; Herbie Hopkins <herbs@gentoo.org> libdrm-1.0.1.ebuild:
  Marked ~amd64

  09 Aug 2005; Ferris McCormick <fmccor@gentoo.org> libdrm-1.0.1.ebuild:
  Add ~sparc keyword (X modular testing).

*libdrm-1.0.1 (08 Aug 2005)

  08 Aug 2005; Donnie Berkholz <spyderous@gentoo.org>; +libdrm-1.0.1.ebuild:
  Initial commit for modular X.
