@@ -1,8 +1,10 @@
-MD5 fedf6f03274775f7e6f584d5371cdad1 ChangeLog 1085
+MD5 a4effe71d706b5f4e1f2c327617491de ChangeLog 1215
 MD5 5713bdf6704d9811bdbe277fc186952b files/digest-libdrm-1.0.1 64
 MD5 374029a0c9d0ee2cd86e576cf9491167 files/digest-libdrm-1.0.3 64
 MD5 e3477e348b25d828dd7112b52678ae67 files/digest-libdrm-1.0.4 65
+MD5 aa5634e3e24d23d465ff2be3fa5ce7b5 files/digest-libdrm-1.0.5 64
 MD5 c7b27a8c50ee4bf0b32bb5e7d63d0831 libdrm-1.0.1.ebuild 531
 MD5 8b0ee888549ddd94020638c6f1cd4cfd libdrm-1.0.3.ebuild 541
 MD5 4e2991d99bd1098f1d4877102563ab02 libdrm-1.0.4.ebuild 543
+MD5 f589b01addf4aa6d1d01e474c4f91769 libdrm-1.0.5.ebuild 521
 MD5 a37bab73e2f24b213932c30997d3d360 metadata.xml 156
