@@ -1,6 +1,11 @@
 # ChangeLog for x11-libs/libdrm
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libdrm/ChangeLog,v 1.8 2005/10/20 19:22:28 spyderous Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libdrm/ChangeLog,v 1.9 2005/10/31 18:44:21 spyderous Exp $
+
+*libdrm-1.0.5 (31 Oct 2005)
+
+  31 Oct 2005; Donnie Berkholz <spyderous@gentoo.org>; +libdrm-1.0.5.ebuild:
+  Bump with via fixes.
 
 *libdrm-1.0.4 (20 Oct 2005)
 
